clusters/local/apps/blog/wordpress/wp-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: blog
  labels:
    app: wordpress
spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: wordpress

  template:
    metadata:
      labels:
        app: wordpress

    spec:
      automountServiceAccountToken: false

      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups: [33]

      containers:
        - name: wordpress
          image: wordpress:6.8.2-php8.3-apache
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          securityContext:
            runAsUser: 33
            runAsGroup: 33
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL

          startupProbe:
            httpGet:
              path: /wp-login.php
              port: http
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /wp-login.php
              port: http
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /wp-login.php
              port: http
              httpHeaders:
                - name: Host
                  value: localhost
            initialDelaySeconds: 0
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html

      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-data
