clusters/local/apps/blog/wordpress/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: blog
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: http
